--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ confection==0.1.5
 cryptography==44.0.2
 cssselect==1.3.0
 cymem==2.0.11
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 feedfinder2==0.0.4
 feedparser==6.0.11
 filelock==3.18.0
